FEATURE: Employee Data - personal - add "fill input" if identity number exist

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2362,6 +2362,8 @@
   "boilerplate.containers.Payroll.Employee.employeeNameShouldNotBeOneWord": "يجب أن يكون اسم الموظف أكثر من كلمة واحدة",
   "boilerplate.containers.Payroll.Employee.usernameAlreadyExist": "اسم المستخدم موجود بالفعل",
   "boilerplate.containers.Payroll.Employee.nickName": "اسم الشهرة",
+  "boilerplate.containers.Payroll.Employee.employeeAlreadyExistWhatActionYouWant": "الموظف موجود بالفعل ما الإجراء الذي تريده",
+  "boilerplate.containers.Payroll.Employee.fillInputs": "ملء المدخلات",
   "boilerplate.containers.Payroll.Employee.userName": "اسم المستخدم",
   "boilerplate.containers.Payroll.Employee.telephone": "رقم التلفون",
   "boilerplate.containers.Payroll.Employee.workMobile": "رقم الهاتف للعمل",
