--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2400,6 +2400,7 @@
   "boilerplate.containers.Payroll.MainData.codes.hrForm": "نموذج الموارد البشرية",
   "boilerplate.containers.Payroll.MainData.codes.companyPolicy": "سياسة الشركة",
   "boilerplate.containers.Payroll.MainData.codes.arName": "الاسم بالعربية",
+  "boilerplate.containers.Payroll.MainData.codes.monthlySmartObjective": "الهدف الشهري",
   "boilerplate.containers.Payroll.MainData.codes.enName": "الاسم بالانجليزية",
   "boilerplate.containers.Payroll.MainData.codes.parent": "الوظيفة الرئيسية",
   "boilerplate.containers.Payroll.MainData.codes.parentName": "الوظيفة الرئيسية",
