--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -3186,5 +3186,7 @@
   "boilerplate.containers.Payroll.SmartObjective.totalWeight": "اجمالى الاهداف",
   "boilerplate.containers.Payroll.SmartObjective.totalScore": "النتيجة الإجمالية",
 
-  "boilerplate.containers.Payroll.KPI.uploadErrorMess": "لم يتم حفظ هذه البيانات بسبب عدم اكتمالها"
+  "boilerplate.containers.Payroll.KPI.uploadErrorMess": "لم يتم حفظ هذه البيانات بسبب عدم اكتمالها",
+
+  "boilerplate.containers.Payroll.Employee.ExpiryCardErrMes": "انتهت صلاحية البطاقة"
 }
