--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -917,6 +917,7 @@
   "boilerplate.containers.Payroll.code": "Code",
   "boilerplate.containers.Payroll.delete": "Delete",
   "boilerplate.containers.Payroll.name": "Name",
+  "boilerplate.containers.Payroll.more": "More",
   "boilerplate.containers.Payroll.organizationName": "Department",
   "boilerplate.containers.Payroll.chooseEmp": "Select Employee",
   "boilerplate.containers.Payroll.search": "Search",
