finish ShiftManPowerReport page , edit search component

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1881,6 +1881,9 @@
 
     "boilerplate.containers.Payroll.Attendance.method": "طريفة السحب",
 
+    "boilerplate.containers.Payroll.Attendance.attend": "حضور",
+    "boilerplate.containers.Payroll.Attendance.dateAndShiftErrMes": "يجب ان تختار التاريخ والوردية",
+
     
   "boilerplate.containers.Payroll.Payroll.monthName": "الشهر",
   "boilerplate.containers.Payroll.Payroll.yearName": "السنة",
