--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -928,6 +928,7 @@
   "boilerplate.containers.Payroll.close": "إغلاق",
   "boilerplate.containers.Payroll.cancel": "الغاء",
   "boilerplate.containers.Payroll.downloadExcel": "تنزيل Excel",
+  "boilerplate.containers.Payroll.goTo": "اذهب إلى",
   "boilerplate.containers.Payroll.minDate": "اقل تاريخ",
   "boilerplate.containers.Payroll.maxDate": "اعلي تاريخ",
   "boilerplate.containers.Payroll.id": "كود الموظف",
