FEATURE:  setting - create startup "CertificateSetting" page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1151,6 +1151,14 @@
   "boilerplate.containers.Payroll.Setting.parentName": "القائمة الرئيسية",
   "boilerplate.containers.Payroll.Setting.menuName": "اسم القائمة",
   "boilerplate.containers.Payroll.Setting.delete": "حذف",
+  "boilerplate.containers.Payroll.Setting.textColor": "لون النص",
+  "boilerplate.containers.Payroll.Setting.fontSize": "حجم النص",
+  "boilerplate.containers.Payroll.Setting.xDirection": "اتجاه X",
+  "boilerplate.containers.Payroll.Setting.yDirection": "اتجاه Y",
+  "boilerplate.containers.Payroll.Setting.isCenter": "النص في المنتصف",
+  "boilerplate.containers.Payroll.Setting.employeeName": "اسم الموظف",
+  "boilerplate.containers.Payroll.Setting.courseName": "اسم الكورس",
+  "boilerplate.containers.Payroll.Setting.accomplishDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.Setting.letPasswordEmptyWillGenerateRandomPassword": "لإنشاء كلمة مرور عشوائية، اترك النص فارغًا",
   "boilerplate.containers.Payroll.Setting.userName": "اسم المستخدم",
   "boilerplate.containers.Payroll.Setting.loan": "قرض",
