--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1125,6 +1125,14 @@
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
   "boilerplate.containers.Payroll.Setting.delete": "Delete",
   "boilerplate.containers.Payroll.Setting.loan": "Loan",
+  "boilerplate.containers.Payroll.Setting.textColor": "Text Color",
+  "boilerplate.containers.Payroll.Setting.fontSize": "Font Size",
+  "boilerplate.containers.Payroll.Setting.xDirection": "X Direction",
+  "boilerplate.containers.Payroll.Setting.yDirection": "Y Direction",
+  "boilerplate.containers.Payroll.Setting.isCenter": "Is Center",
+  "boilerplate.containers.Payroll.Setting.employeeName": "Employee Name",
+  "boilerplate.containers.Payroll.Setting.courseName": "Course Name",
+  "boilerplate.containers.Payroll.Setting.accomplishDate": "Accomplish Date",
   "boilerplate.containers.Payroll.Setting.userName": "Username",
   "boilerplate.containers.Payroll.Setting.letPasswordEmptyWillGenerateRandomPassword": "To generate random password leave the text empty",
   "boilerplate.containers.Payroll.Setting.submitUniform": "Submit Uniform",
