--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2327,6 +2327,7 @@
   "boilerplate.containers.Payroll.Employee.employeeAlreadyExistWhatActionYouWant": "Employee Already Exist What Action You Want",
   "boilerplate.containers.Payroll.Employee.fillInputs": "Fill Inputs",
   "boilerplate.containers.Payroll.Employee.email": "Email",
+  "boilerplate.containers.Payroll.Employee.contractDateMustNotPrecedeTheAppointmentDate": "The contract date must not precede the appointment date",
   "boilerplate.containers.Payroll.Employee.nickName": "Nick Name",
   "boilerplate.containers.Payroll.Employee.relativePhoneNumber": "Relative Phone Number",
   "boilerplate.containers.Payroll.Employee.mobile": "Mobile",
