--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2546,7 +2546,7 @@
   "boilerplate.containers.Payroll.vac.code.AnnualInAdvance": "Annual in advance",
   "boilerplate.containers.Payroll.vac.code.MustAttachFile": "Must attach file",
 
-  "boilerplate.containers.Payroll.vac.code.webInvisible": "Used for Hr",
+  "boilerplate.containers.Payroll.vac.code.webInvisible": "Used by Hr only",
 
   "boilerplate.containers.Payroll.vac.code.GovernmentSickLeaveSetting": "Government sick leave setting",
   "boilerplate.containers.Payroll.vac.code.VacationType": "Leave type",
