IMPROVE: EmployeeNavigation component - add translation for menu item

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -905,6 +905,17 @@
   "boilerplate.containers.Payroll.cancel": "الغاء",
   "boilerplate.containers.Payroll.downloadExcel": "تنزيل Excel",
   "boilerplate.containers.Payroll.goTo": "اذهب إلى",
+  "boilerplate.containers.Payroll.personal": "المعلومات الشخصية",
+  "boilerplate.containers.Payroll.qualification": "المؤهلات",
+  "boilerplate.containers.Payroll.contactInfo": "معلومات الاتصال",
+  "boilerplate.containers.Payroll.address": "العناوين",
+  "boilerplate.containers.Payroll.car": "بيانات السيارات",
+  "boilerplate.containers.Payroll.course": "الدورات",
+  "boilerplate.containers.Payroll.contract": "بيانات وظيفية",
+  "boilerplate.containers.Payroll.experience": "الخبرات السابقة",
+  "boilerplate.containers.Payroll.insurance": "مدد تأمينية",
+  "boilerplate.containers.Payroll.bank": "بيانات البنك",
+  "boilerplate.containers.Payroll.salary": "الراتب",
   "boilerplate.containers.Payroll.minDate": "اقل تاريخ",
   "boilerplate.containers.Payroll.maxDate": "اعلي تاريخ",
   "boilerplate.containers.Payroll.id": "كود الموظف",
