--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -908,6 +908,17 @@
   "boilerplate.containers.Payroll.hrLetterDate": "Letter Date",
   "boilerplate.containers.Payroll.meetingReq": "Meeting Request",
   "boilerplate.containers.Payroll.goTo": "Go To",
+  "boilerplate.containers.Payroll.personal": "Personal Information",
+  "boilerplate.containers.Payroll.qualification": "Qualification",
+  "boilerplate.containers.Payroll.contactInfo": "Contact Information",
+  "boilerplate.containers.Payroll.address": "Address",
+  "boilerplate.containers.Payroll.car": "Car",
+  "boilerplate.containers.Payroll.course": "Course",
+  "boilerplate.containers.Payroll.contract": "Contract",
+  "boilerplate.containers.Payroll.experience": "Experience",
+  "boilerplate.containers.Payroll.insurance": "Insurance",
+  "boilerplate.containers.Payroll.bank": "Bank",
+  "boilerplate.containers.Payroll.salary": "Salary",
   "boilerplate.containers.Payroll.add": "Add",
   "boilerplate.containers.Payroll.yes": "Yes",
   "boilerplate.containers.Payroll.no": "No",
