--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -912,6 +912,9 @@
   "boilerplate.containers.Payroll.status": "Status",
   "boilerplate.containers.Payroll.approvedEmp": "WF Decision Maker",
   "boilerplate.containers.Payroll.edit": "Edit",
+  "boilerplate.containers.Payroll.leave": "Leave",
+  "boilerplate.containers.Payroll.mission": "Mission",
+  "boilerplate.containers.Payroll.permission": "Permission",
   "boilerplate.containers.Payroll.addNew": "Add",
   "boilerplate.containers.Payroll.saturday": "Sat",
   "boilerplate.containers.Payroll.sunday": "Sun",
