IMPROVE: Setting - ResetPassword - add ability to change username within password

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -301,6 +301,7 @@
   "boilerplate.components.Sidebar.sub_menu_1": "القائمة الفرعية 1",
   "boilerplate.components.Sidebar.sub_menu_2": "القائمة الفرعية 2",
   "boilerplate.components.Header.action.fullscreen": "ملء الشاشة",
+  "boilerplate.components.Header.action.fullScreen": "ملء الشاشة",
   "boilerplate.components.Header.action.exitFullScreen": "إنهاء ملء الشاشة",
   "boilerplate.components.Header.action.lamp": "بدوره الظلام / الضوء",
   "boilerplate.components.Header.action.guide": "دليل المعرض",
@@ -907,6 +908,7 @@
   "boilerplate.containers.Payroll.Setting.isCenter": "النص في المنتصف",
   "boilerplate.containers.Payroll.Setting.employeeName": "اسم الموظف",
   "boilerplate.containers.Payroll.Setting.courseName": "اسم الكورس",
+  "boilerplate.containers.Payroll.Setting.changeUsername": "تغيير اسم المستخدم",
   "boilerplate.containers.Payroll.Setting.accomplishDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.Setting.letPasswordEmptyWillGenerateRandomPassword": "لإنشاء كلمة مرور عشوائية، اترك النص فارغًا",
   "boilerplate.containers.Payroll.Setting.userName": "اسم المستخدم",
