--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -301,6 +301,7 @@
   "boilerplate.components.Sidebar.level_2": "Level 2",
   "boilerplate.components.Sidebar.sub_menu_1": "Sub Menu 1",
   "boilerplate.components.Sidebar.sub_menu_2": "Sub Menu 2",
+  "boilerplate.components.Header.action.fullScreen": "Full Screen",
   "boilerplate.components.Header.action.fullscreen": "Full Screen",
   "boilerplate.components.Header.action.exitFullScreen": "Exit Full Screen",
   "boilerplate.components.Header.action.lamp": "Turn Dark/Light",
@@ -882,6 +883,7 @@
   "boilerplate.containers.Payroll.Setting.isCenter": "Is Center",
   "boilerplate.containers.Payroll.Setting.employeeName": "Employee Name",
   "boilerplate.containers.Payroll.Setting.courseName": "Course Name",
+  "boilerplate.containers.Payroll.Setting.changeUsername": "Change Username",
   "boilerplate.containers.Payroll.Setting.accomplishDate": "Accomplish Date",
   "boilerplate.containers.Payroll.Setting.userName": "Username",
   "boilerplate.containers.Payroll.Setting.letPasswordEmptyWillGenerateRandomPassword": "To generate random password leave the text empty",
