FIX: Auth - login - add missing translation

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -160,7 +160,10 @@
   "boilerplate.components.Forms.Login.field.forgot": "نسيت كلمة المرور",
   "boilerplate.components.Forms.Login.field.name": "اسم المستخدم",
   "boilerplate.components.Forms.Login.field.remember": "تذكر",
-  "boilerplate.components.Forms.Login.button.continue": "Continue",
+  "boilerplate.components.Forms.Login.button.continue": "متابعة",
+  "boilerplate.components.Forms.button.linkedin": "لينكدان",
+  "boilerplate.components.Forms.button.twitter": "تويتر",
+  "boilerplate.components.Forms.button.facebook": "فيسبوك",
   "boilerplate.containers.Users.Greeting.title": "مرحبًا ، سعدت بلقائك",
   "boilerplate.containers.Users.Greeting.subtitle": "سجل فقط للانضمام إلينا",
   "boilerplate.components.Forms.Register.field.name": "اسم المستخدم",
