--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -161,6 +161,9 @@
   "boilerplate.components.Forms.Login.field.name": "Username",
   "boilerplate.components.Forms.Login.field.remember": "Remember",
   "boilerplate.components.Forms.Login.button.continue": "Continue",
+  "boilerplate.components.Forms.button.linkedin": "Linkedin",
+  "boilerplate.components.Forms.button.twitter": "Twitter",
+  "boilerplate.components.Forms.button.facebook": "Facebook",
   "boilerplate.containers.Users.Greeting.title": "Hello, nice to meet you",
   "boilerplate.containers.Users.Greeting.subtitle": "Just register to join with us",
   "boilerplate.components.Forms.Register.field.name": "Username",
